see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, 1.7 and 2.5, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

01-Feb-2012 Jean-Marie Simonet
 # [#27929] *Installing sample data and defining as site lang another lang then English breaks links. Thanks Christophe.
 $ [#27796] COM_USERS_FITLER_NOTES. Thanks Brian.
 $ Other language corrections com_media.
 # [#27774] Joomla on Windows Azure - Load time is slow. Thanks Sudhi
 # [#27581] Basic Search contact search is broken. Thanks Elin.
 # [#27890] mod_menu invalid rendering of items of type alias and url. Thanks Elin.
 # [#27829] $app variable can possibly not be set, causing a PHP error. Thanks Michael
 # [#27862] Code error plgUserProfile line 188. Thanks A. Kirk and Viet.
 # [#27868] Joomla 1.7.x batch processing allow move items to trashed categories. Thanks Michael
 # [#27916] Path of home sub-menu items contain "News Feeds". Thanks Mark

31-Jan-2012 Christophe Demko
 ^ [#27905] Upgrade MooTools to version 1.4.3 (Rouven Weßling)
 # [#27662] Can't update #__update_sites table at extension install on SQL Server (Michael Babker)
 # [#27872] Error in Banner Track Clicks (Evan Nazareno)
 # [#27919] Extension Manager: Database does not fix text filter problem (Jean-Marie Simonet, Mark Dexter)

31-Jan-2012 Jean-Marie Simonet
 $ Adding new installation language ug-CN
 $ Updating installation ini file no-NO

30-Jan-2012 Christophe Demko
 # [#27885] TinyMCE settings in SQL don't reflect recent changes in options. (Andrea Tarr, Elin Waring)

30-Jan-2012 Jean-Marie Simonet
 [#27818] Update 1.7 strings to 2.5. Thanks Christophe

30-Jan-2012 Mark Dexter
 # [#27887] Extension Manager: Database does not fix update problem